all events fixes to guest avatar alignment and added extra guest image

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -759,7 +759,7 @@ div#slidingDiv
 	height: 225px;
 	line-height: 1px;
 	width: 65%;
-	background-color: #f7f2f2; 
+	background-color: #f7f2f2;
 	float:left;
 	border-top: 1px solid #e8e8e8;
 	border-left: 1px solid #e8e8e8;
@@ -767,9 +767,13 @@ div#slidingDiv
 }
 
 #event-info {
-	padding: 15px;
-	height: 150px;
+	padding: 15px 15px 0px 15px;
+	height: 130px;
 	overflow: hidden;
+}
+
+#event-title > p {
+	margin-bottom: 0.7em;
 }
 
 #event-attendance {
@@ -793,8 +797,8 @@ div#slidingDiv
 }
 
 #host-thumb {
-	width: 75px;
-	height: 75px;
+	width: 45px;
+	height: 45px;
 	border-radius: 150px;
 	border: 2px solid #F9F9F9;
 }
@@ -813,17 +817,24 @@ div#slidingDiv
 	padding: 0;
 }
 
-#image-container {
+#host-container {
 	position: relative;
-	height: 75px;
-	width: 75px;
+	padding-left: 2px;
+}
+
+#guest-container {
+	padding: 0px 2px 0px 8px;
+}
+
+#guest-container > img {
+	display: inline-block;
 }
 
 .icon {
 	z-index: 2;
 	position: relative;
-	left: 40px;
-	top: 50px;
+	left: 20px;
+	top: 18px;
 }
 
 .hostImage {
@@ -1783,7 +1794,6 @@ div.edit-review-bar {
 	padding-bottom: 15px;
 	font-family: 'Open Sans Condensed';
 }
-
 
 #movie-details, #event-details, #commit-event, .comment-panel, #comments, #edit-event, #edit-rating, .friend-page {
 	background: white;
